# promptyard

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DATABASE.md  Dockerfile  IMPLEMENTATION.md  Promptyard.slnx  README.md  TASK.md  TESTING.md  commitlint.config.mjs  db.sqlite3  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  manage.py  mcp.windows.json  next.config.ts  nx.json  package-lock.json  package.json  playwright.config.ts  pyproject.toml  ruff.toml  tsconfig.json  vitest.config.mts  vitest.config.ts
.aspire/: settings.json
.claude/: settings.json  settings.local.json
.claude/commands/: feature.md
.claude/hooks/: git-to-jj-redirector.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: copilot-instructions.md  review-template.md  risk-rules.yml
.github/ISSUE_TEMPLATE/: story.yaml  task.yml
.husky/: pre-commit
.storybook/: main.ts
api/: CLAUDE.md
app/: globals.css  page.tsx
client/: package.json
core/: asgi.py  urls.py  wsgi.py
drizzle/: 0000_silly_next_avengers.sql
host/: AGENTS.md  apphost.cs  apphost.run.json
lib/: auth-client.ts  better-auth.ts
portal/: AGENTS.md  CLAUDE.md  README.md  auth.ts  drizzle.config.ts  eslint.config.mjs  instrumentation.ts  package-lock.json  package.json  project.json  vitest.config.ts  vitest.setup.ts
prisma/: schema.prisma
profiles/: models.py  urls.py  views.py
prompts/: models.py
scripts/: compute-final-tier.test.ts  compute-final-tier.ts  compute-tier.ts
server/: package-lock.json  package.json
src/: middleware.ts
(+388 files in other folders)
